--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "vdb/php-spider": "^0.2.0",
         "nategood/httpful": "^0.2.20",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "paquettg/php-html-parser": "^1.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
