--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "nategood/httpful": "^0.2.20",
         "doctrine/dbal": "^2.5",
         "paquettg/php-html-parser": "^1.7",
-        "aylien/textapi": "^0.6.0"
+        "aylien/textapi": "^0.6.0",
+        "abraham/twitteroauth": "^0.7.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
